--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
           <p data-lang="ar">نمكّن طلاب برنامج خطوة أكاديميًا واجتماعيًا وثقافيًا، ونبني الجسر بين الطلاب وإدارة الجامعة بفعاليات نوعية وخدمات موجهة.</p>
           <p data-lang="en" hidden>We empower Khotwa students academically, socially, and culturally, building bridges with the university through quality events and tailored services.</p>
           <div class="cta-row">
-            <a href="/contact.html" class="btn btn-primary"><span data-lang="ar">قدّم للعضوية</span><span data-lang="en" hidden>Apply for Membership</span></a>
+            <a href="/register.html"class="btn btn-primary"><span data-lang="ar">قدّم للعضوية</span><span data-lang="en" hidden>Apply for Membership</span></a>
             <a href="/events.html" class="btn btn-outline"><span data-lang="ar">شاهد أقرب الفعاليات</span><span data-lang="en" hidden>See Upcoming Events</span></a>
           </div>
         </div>
@@ -432,3 +432,4 @@
   </script>
 </body>
 </html>
+
