--- a/events.html
+++ b/events.html
@@ -11,15 +11,15 @@
   <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
   <meta name="theme-color" content="#0a0f1a" media="(prefers-color-scheme: dark)">
 
-  <!-- Open Graph -->
+  <!-- OG -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Khotwa Student Council">
   <meta property="og:title" content="الفعاليات – Khotwa">
   <meta property="og:description" content="تابع كل جديد من فعاليات مجلس طلاب خطوة.">
   <meta property="og:url" content="https://khotwastudentcouncil.com/events.html">
-  <meta property="og:image" content="https://images.unsplash.com/photo-1517048676732-d65bc937f952?auto=format&fit=crop&w=1600&q=80">
+  <meta property="og:image" content="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?auto=format&fit=crop&w=1600&q=80">
 
-  <!-- JSON-LD (SEO) -->
+  <!-- JSON-LD -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
@@ -44,13 +44,14 @@
     body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:var(--surface)}
     a{color:inherit;text-decoration:none}
     .container{width:min(1120px,92%);margin-inline:auto}
+
     :where(a,button,[role="button"],input,select,textarea):focus-visible{outline:3px solid #2563eb;outline-offset:3px;border-radius:8px}
     .skip-link{position:absolute;inset-inline-start:1rem;inset-block-start:-100px;background:#fff;color:#000;padding:.6rem .9rem;border-radius:10px;box-shadow:var(--sh-sm);z-index:1000}
     .skip-link:focus{inset-block-start:1rem}
 
-    /* NAV (مطابق للبقية) */
+    /* NAV */
     .navbar{position:sticky;top:0;z-index:40;background:color-mix(in oklab,#ffffff 80%,transparent);border-bottom:1px solid var(--ring);backdrop-filter:blur(8px)}
-    .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0;gap:.8rem;position:relative}
+    .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0;gap:.8rem}
     .brand{display:flex;align-items:center;gap:.8rem;font-weight:800}
     .brand .logo{width:40px;height:40px;object-fit:cover;border-radius:12px;box-shadow:0 2px 6px rgba(0,0,0,.06)}
     .nav-links{display:flex;gap:.25rem;align-items:center}
@@ -59,20 +60,18 @@
     .nav-links a[aria-current="page"]{background:var(--card)}
     .lang-toggle{padding:.45rem .75rem;border:1px solid var(--ring);background:#fff;border-radius:var(--r-md);cursor:pointer;font-weight:600}
 
-    /* Section */
     section{padding:2rem 0}
     .section-head{display:flex;align-items:flex-end;justify-content:space-between;gap:1rem;margin-bottom:1.2rem}
     .section-head h1{margin:0;font-size:clamp(1.6rem,2.6vw + 1rem,2.2rem)}
     .muted{color:var(--muted)}
 
-    /* Grid + Cards (مثل الأخبار) */
     .grid{display:grid;gap:1rem}
     .grid-3{grid-template-columns:repeat(3,1fr)}
     @media(max-width:980px){.grid-3{grid-template-columns:1fr}}
 
     .card{background:#fff;border:1px solid var(--ring);border-radius:var(--r-lg);box-shadow:var(--sh-sm);overflow:hidden;display:flex;flex-direction:column}
     .thumb{width:100%;height:180px;background:#eef2ff}
-    .thumb img{width:100%;height:100%;object-fit:cover;object-position:center;border:0;display:block}
+    .thumb img{width:100%;height:100%;object-fit:cover;object-position:center;display:block}
     .card-body{padding:1rem;display:flex;flex-direction:column;gap:.6rem;flex:1}
     .chip{display:inline-flex;align-items:center;gap:.4rem;font-size:.82rem;padding:.25rem .6rem;border-radius:999px;background:var(--card);border:1px solid var(--ring)}
     .card h3{margin:.2rem 0 .2rem;font-size:1.06rem}
@@ -80,11 +79,9 @@
     .btn{display:inline-block;margin-top:.4rem;padding:.6rem .9rem;border-radius:12px;background:var(--primary);color:#fff;font-weight:700;text-align:center}
     .btn:hover{background:var(--primary-600)}
 
-    /* Footer */
     footer{border-top:1px solid var(--ring);background:#fff}
     .foot{display:flex;justify-content:space-between;gap:1rem;align-items:center;padding:1.2rem 0}
 
-    /* Dark */
     @media (prefers-color-scheme: dark){
       :root{--surface:#0a0f1a;--card:#0b1220;--ring:#1f2937;--text:#e5e7eb;--muted:#9ca3af}
       .navbar,footer{background:#0c1220;border-color:var(--ring)}
@@ -96,7 +93,6 @@
 <body>
   <a class="skip-link" href="#main">تخطَّ إلى المحتوى</a>
 
-  <!-- NAVBAR -->
   <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
       <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
@@ -131,24 +127,22 @@
         <article class="card" id="e-workshop">
           <div class="thumb">
             <img
-              src="https://images.unsplash.com/photo-1517048676732-d65bc937f952?auto=format&fit=crop&w=1200&q=80"
+              src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?auto=format&fit=crop&w=1200&q=80"
               srcset="
-                https://images.unsplash.com/photo-1517048676732-d65bc937f952?auto=format&fit=crop&w=800&q=70 800w,
-                https://images.unsplash.com/photo-1517048676732-d65bc937f952?auto=format&fit=crop&w=1200&q=80 1200w"
+                https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?auto=format&fit=crop&w=800&q=70 800w,
+                https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?auto=format&fit=crop&w=1200&q=80 1200w"
               sizes="(max-width:980px) 92vw, 33vw"
-              alt="ورشة وتعريف بالتخصصات">
+              alt="ورشة عمل وتعاون طلابي">
           </div>
           <div class="card-body">
-            <span class="chip">
-              <time data-lang="ar">10 سبتمبر – 5:00م</time>
-              <time data-lang="en" hidden>10 Sep – 5:00 PM</time>
-            </span>
+            <span class="chip"><time data-lang="ar">10 سبتمبر – 5:00م</time><time data-lang="en" hidden>10 Sep – 5:00 PM</time></span>
             <h3 data-lang="ar">ورشة تخصصات خطوة</h3>
             <h3 data-lang="en" hidden>Khotwa Majors Workshop</h3>
-            <p data-lang="ar">جلسة تعريفيّة عن تخصصات خطوة: IT، الأمن السيبراني، العلوم الحيوية، والأعمال.</p>
+            <p data-lang="ar">جلسة تعريفية عن تخصصات خطوة: IT، الأمن السيبراني، العلوم الحيوية، والأعمال.</p>
             <p data-lang="en" hidden>Intro to Khotwa majors: IT, Cybersecurity, Biosciences, and Business.</p>
-            <a class="btn" href="/register.html?event=workshop" data-lang="ar">سجّل الآن</a>
-            <a class="btn" href="/register.html?event=workshop" data-lang="en" hidden>Register</a>
+            <!-- رابط التواصل -->
+            <a class="btn" href="/contact.html?event=workshop" data-lang="ar">سجّل الآن</a>
+            <a class="btn" href="/contact.html?event=workshop" data-lang="en" hidden>Register</a>
           </div>
         </article>
 
@@ -156,24 +150,22 @@
         <article class="card" id="e-padel">
           <div class="thumb">
             <img
-              src="https://images.unsplash.com/photo-1605540436563-5f4d9f4d0a21?auto=format&fit=crop&w=1200&q=80"
+              src="https://images.unsplash.com/photo-1517649763962-0c623066013b?auto=format&fit=crop&w=1200&q=80"
               srcset="
-                https://images.unsplash.com/photo-1605540436563-5f4d9f4d0a21?auto=format&fit=crop&w=800&q=70 800w,
-                https://images.unsplash.com/photo-1605540436563-5f4d9f4d0a21?auto=format&fit=crop&w=1200&q=80 1200w"
+                https://images.unsplash.com/photo-1517649763962-0c623066013b?auto=format&fit=crop&w=800&q=70 800w,
+                https://images.unsplash.com/photo-1517649763962-0c623066013b?auto=format&fit=crop&w=1200&q=80 1200w"
               sizes="(max-width:980px) 92vw, 33vw"
-              alt="ملعب بادل وتجهيز بطولة">
+              alt="ملعب رياضي داخلي للبطولة">
           </div>
           <div class="card-body">
-            <span class="chip">
-              <time data-lang="ar">24 سبتمبر – 4:00م</time>
-              <time data-lang="en" hidden>24 Sep – 4:00 PM</time>
-            </span>
+            <span class="chip"><time data-lang="ar">24 سبتمبر – 4:00م</time><time data-lang="en" hidden>24 Sep – 4:00 PM</time></span>
             <h3 data-lang="ar">بطولة البادل</h3>
             <h3 data-lang="en" hidden>Padel Championship</h3>
             <p data-lang="ar">بطولة رياضية لطلاب خطوة – La Trobe Sports Centre.</p>
             <p data-lang="en" hidden>Sports tournament for Khotwa students – La Trobe Sports Centre.</p>
-            <a class="btn" href="/register.html?event=padel" data-lang="ar">سجّل الآن</a>
-            <a class="btn" href="/register.html?event=padel" data-lang="en" hidden>Register</a>
+            <!-- رابط التواصل -->
+            <a class="btn" href="/contact.html?event=padel" data-lang="ar">سجّل الآن</a>
+            <a class="btn" href="/contact.html?event=padel" data-lang="en" hidden>Register</a>
           </div>
         </article>
 
@@ -181,24 +173,22 @@
         <article class="card" id="e-marathon">
           <div class="thumb">
             <img
-              src="https://images.unsplash.com/photo-1541534401786-2077eed87a74?auto=format&fit=crop&w=1200&q=80"
+              src="https://images.unsplash.com/photo-1546483875-ad9014c88eba?auto=format&fit=crop&w=1200&q=80"
               srcset="
-                https://images.unsplash.com/photo-1541534401786-2077eed87a74?auto=format&fit=crop&w=800&q=70 800w,
-                https://images.unsplash.com/photo-1541534401786-2077eed87a74?auto=format&fit=crop&w=1200&q=80 1200w"
+                https://images.unsplash.com/photo-1546483875-ad9014c88eba?auto=format&fit=crop&w=800&q=70 800w,
+                https://images.unsplash.com/photo-1546483875-ad9014c88eba?auto=format&fit=crop&w=1200&q=80 1200w"
               sizes="(max-width:980px) 92vw, 33vw"
-              alt="متسابقون في ماراثون داخل الحرم">
+              alt="عداؤون في ماراثون جامعي">
           </div>
           <div class="card-body">
-            <span class="chip">
-              <time data-lang="ar">1 أكتوبر – 9:00ص</time>
-              <time data-lang="en" hidden>1 Oct – 9:00 AM</time>
-            </span>
+            <span class="chip"><time data-lang="ar">1 أكتوبر – 9:00ص</time><time data-lang="en" hidden>1 Oct – 9:00 AM</time></span>
             <h3 data-lang="ar">ماراثون داخل الحرم</h3>
             <h3 data-lang="en" hidden>On-Campus Marathon</h3>
             <p data-lang="ar">مسارات 1K و2.5K و10K مع نقاط مياه وخدمات دعم.</p>
             <p data-lang="en" hidden>1K, 2.5K & 10K routes with water points and support.</p>
-            <a class="btn" href="/register.html?event=marathon" data-lang="ar">سجّل الآن</a>
-            <a class="btn" href="/register.html?event=marathon" data-lang="en" hidden>Register</a>
+            <!-- رابط التواصل -->
+            <a class="btn" href="/contact.html?event=marathon" data-lang="ar">سجّل الآن</a>
+            <a class="btn" href="/contact.html?event=marathon" data-lang="en" hidden>Register</a>
           </div>
         </article>
       </div>
@@ -216,7 +206,7 @@
     // سنة الحقوق
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // اللغة (نفس باقي الصفحات)
+    // تبديل اللغة (مطابق لبقية الصفحات)
     const toggleBtn = document.getElementById('lang-toggle');
     let isEn = localStorage.getItem('khotwa_lang') === 'en';
     function setLang(en){
