--- a/events.html
+++ b/events.html
@@ -149,13 +149,15 @@
         <!-- بطولة البادل -->
         <article class="card" id="e-padel">
           <div class="thumb">
-            <img
-              src="https://images.unsplash.com/photo-1517649763962-0c623066013b?auto=format&fit=crop&w=1200&q=80"
-              srcset="
-                https://images.unsplash.com/photo-1517649763962-0c623066013b?auto=format&fit=crop&w=800&q=70 800w,
-                https://images.unsplash.com/photo-1517649763962-0c623066013b?auto=format&fit=crop&w=1200&q=80 1200w"
-              sizes="(max-width:980px) 92vw, 33vw"
-              alt="ملعب رياضي داخلي للبطولة">
+           <img
+  src="https://source.unsplash.com/1600x1000/?padel,court,racket"
+  srcset="
+    https://source.unsplash.com/800x500/?padel,court,racket 800w,
+    https://source.unsplash.com/1200x750/?padel,court,racket 1200w,
+    https://source.unsplash.com/1600x1000/?padel,court,racket 1600w"
+  sizes="(max-width:980px) 92vw, 360px"
+  alt="بطولة البادل – La Trobe Sports Centre"
+/>
           </div>
           <div class="card-body">
             <span class="chip"><time data-lang="ar">24 سبتمبر – 4:00م</time><time data-lang="en" hidden>24 Sep – 4:00 PM</time></span>
@@ -172,13 +174,15 @@
         <!-- ماراثون -->
         <article class="card" id="e-marathon">
           <div class="thumb">
-            <img
-              src="https://images.unsplash.com/photo-1546483875-ad9014c88eba?auto=format&fit=crop&w=1200&q=80"
-              srcset="
-                https://images.unsplash.com/photo-1546483875-ad9014c88eba?auto=format&fit=crop&w=800&q=70 800w,
-                https://images.unsplash.com/photo-1546483875-ad9014c88eba?auto=format&fit=crop&w=1200&q=80 1200w"
-              sizes="(max-width:980px) 92vw, 33vw"
-              alt="عداؤون في ماراثون جامعي">
+           <img
+  src="https://source.unsplash.com/1600x1000/?marathon,road,running"
+  srcset="
+    https://source.unsplash.com/800x500/?marathon,road,running 800w,
+    https://source.unsplash.com/1200x750/?marathon,road,running 1200w,
+    https://source.unsplash.com/1600x1000/?marathon,road,running 1600w"
+  sizes="(max-width:980px) 92vw, 360px"
+  alt="متسابقون في ماراثون داخل الحرم – La Trobe"
+/>
           </div>
           <div class="card-body">
             <span class="chip"><time data-lang="ar">1 أكتوبر – 9:00ص</time><time data-lang="en" hidden>1 Oct – 9:00 AM</time></span>
