--- a/events.html
+++ b/events.html
@@ -277,6 +277,6 @@
     }
     toggleBtn.addEventListener('click',()=> setLang(!(localStorage.getItem('khotwa_lang') === 'en')));
     setLang(isEn);
-  </script>
+  <script src="/assets/cms-boot.js" defer></script>
 </body>
 </html>
