--- a/index.html
+++ b/index.html
@@ -429,7 +429,8 @@
       onScroll();
       window.addEventListener('scroll', onScroll, {passive:true});
     })();
-  </script>
+  <script src="/assets/cms-boot.js" defer></script>
 </body>
 </html>
+
 
