--- a/resources.html
+++ b/resources.html
@@ -294,6 +294,6 @@
     }
     toggleBtn.addEventListener('click',()=> setLang(!isEn));
     setLang(isEn);
-  </script>
+  <script src="/assets/cms-boot.js" defer></script>
 </body>
 </html>
