--- a/contact.html
+++ b/contact.html
@@ -319,6 +319,6 @@
         show(isEn ? 'Network error ❌' : 'خطأ بالشبكة ❌', false);
       }
     });
-  </script>
+  <script src="/assets/cms-boot.js" defer></script>
 </body>
 </html>
