--- a/about.html
+++ b/about.html
@@ -285,6 +285,6 @@
     }
     toggleBtn.addEventListener('click',()=> setLang(!(localStorage.getItem('khotwa_lang') === 'en')));
     setLang(isEn);
-  </script>
+  <script src="/assets/cms-boot.js" defer></script>
 </body>
 </html>
